<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.rx.RxMainFragment">

    <TextView
        android:id="@+id/sample_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rx_head"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sample_head">
        <Button
            android:id="@+id/toRxCommunicationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rx_communication_button_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/rx_communication_button_desc"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/toRxEuPIBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rx_eupi_button_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/rx_eupi_button_desc"
            android:textAlignment="center"
            android:layout_gravity="center"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>